# alpha-stable

./: Cargo.toml  README.md
examples/distribution/: main.rs
examples/sample/: main.rs
examples/sample_histograms/: main.rs
src/: alpha_stable.rs  bisect.rs  error.rs  integrator.rs  lib.rs  numerical_result.rs
