[package]
name = "alpha_stable"
version = "0.1.0"
edition = "2021"
description = "Sample and generate probability distribution functions of Alpha-Stable distributions in Rust."
homepage = "https://github.com/pb137/alpha-stable/"
documentation = "https://github.com/pb137/alpha-stable/"
repository = "https://github.com/pb137/alpha-stable/"
license-file = "LICENSE"
readme = "README.md"
keywords = ["probability", "statistics", "sampling", "levy", "stable"]
categories = ["mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gkquad = "0.0.4"
rand = "0.8.5"
rand_distr = "0.4.3"
spfunc = "0.1.0"
thiserror = "1.0.48"

[dev-dependencies]
plotters = "0.3.3"

